--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="4RL-L5-CYv">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -21,7 +21,7 @@
                                 <rect key="frame" x="250" y="250" width="100" height="100"/>
                                 <state key="normal" image="recordButton"/>
                                 <connections>
-                                    <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="zuh-0k-59T"/>
+                                    <action selector="recordAudio:" destination="BYZ-38-t0r" eventType="touchUpInside" id="BEg-2Z-lDW"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wJ6-88-9ad">
@@ -48,11 +48,32 @@
                             <constraint firstItem="YNB-q6-OYQ" firstAttribute="centerX" secondItem="fsO-mX-jCL" secondAttribute="centerX" id="t0W-8e-B2Y"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="iEI-eR-jZr"/>
                     <connections>
+                        <outlet property="recordButton" destination="fsO-mX-jCL" id="7N9-o4-Vnp"/>
                         <outlet property="recordingLabel" destination="YNB-q6-OYQ" id="g5S-Us-IbE"/>
+                        <outlet property="stopRecordingButton" destination="wJ6-88-9ad" id="ZAr-FY-hU8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1272" y="387"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="FPw-T8-k9Z">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="4RL-L5-CYv" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="yre-kV-ipO">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Im3-Fu-IwA"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yew-8o-w0X" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="460" y="387"/>
         </scene>
